<?xml version="1.0"?>
<package format="3">
  <name>trt_yolo_ros</name>
  <version>0.0.0</version>
  <description>Tensor RT Tiny-Yolov3 package</description>

  <maintainer email="rigel@todo.todo">rigel</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
